--- a/my.css
+++ b/my.css
@@ -382,7 +382,7 @@ margin-right:auto;
       align-items: center;
       width: 100%;
       height: 520px;
-      background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("https://images.wallpapersden.com/image/download/4k-a-different-world_bWVqaG6UmZqaraWkpJRmbmdlrWZlbWU.jpg");
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("https://wallpapercave.com/wp/wp4586808.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
